# meeting-ai

./: .claudecodeignore  .gitignore  ARCHITECTURE.md  CLAUDE.md  docker-compose.dev.yml
.claude/: settings.local.json
backend/node-bot-orchestrator/: .env.example  package-lock.json  package.json
backend/node-bot-orchestrator/.chrome-profile/: .google-signed-in  DevToolsActivePort  Last Browser  Local State
backend/node-bot-orchestrator/.chrome-profile/Default/: DIPS  Favicons  History  MediaDeviceSalts  Network Action Predictor  Preferences  Secure Preferences  Top Sites  (+2 more)
backend/node-bot-orchestrator/chrome-profile/: DevToolsActivePort  Local State
backend/node-bot-orchestrator/src/: config.js  index.js  setup-google.js
backend/python-api/: .env.example  pyproject.toml
backend/python-api/app/: config.py  main.py
backend/python-api/app/api/v1/: action_items.py  jira.py  meetings.py  transcripts.py
backend/python-api/app/core/: database.py  redis_client.py
backend/python-api/app/models/: __init__.py  action_item.py  meeting.py  transcript_line.py
backend/python-api/app/schemas/: action_item.py  meeting.py  transcript.py
backend/python-api/app/services/: action_extractor.py  jira_client.py  meeting_service.py  summarizer.py
backend/python-api/app/workers/: post_meeting_worker.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CaptionOverlay.jsx  MeetingStatus.jsx  SpeakingIndicator.jsx
frontend/src/hooks/: useCaptions.js
scripts/: init_db.sql  run_dev.sh
(+702 files in other folders)
