[project]
name = "meeting-ai-api"
version = "1.0.0"
description = "Meeting AI Assistant - FastAPI control plane"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.30.1",
    "sqlalchemy[asyncio]==2.0.30",
    "asyncpg==0.29.0",
    "alembic==1.13.1",
    "redis[hiredis]==5.0.4",
    "httpx==0.27.0",
    "openai==1.35.3",
    "pydantic==2.7.4",
    "pydantic-settings==2.3.4",
    "python-dotenv==1.0.1",
    "websockets==12.0",
]
